Fixed popup width too small (#49)

--- a/src/options/theme.css
+++ b/src/options/theme.css
@@ -202,6 +202,10 @@ body:not(.page-type-popup) .popup-only {
     display: none !important;
 }
 
+body.page-type-popup {
+    min-width: 400px;
+}
+
 .switch {
     margin-left: 1em;
 }
